remove oneOf declarations -  generate broken code in some languages
