# out/manticore-go/model_delete_document_request.go
@@ -11,7 +11,10 @@
 package openapi
 // DeleteDocumentRequest Payload for delete request. Documents can be deleted either one by one by specifying the document id or by providing a query object. For more information see  [Delete API](https://docs.manticoresearch.com/latest/html/http_reference/json_delete.html) 
 type DeleteDocumentRequest struct {
+	// Index name
 	Index string `json:"index"`
+	// Document ID
 	Id int64 `json:"id,omitempty"`
+	// Query tree object
 	Query map[string]interface{} `json:"query,omitempty"`
 }
